Compile with JDK 17 LTS, including @SuppressWarnings for deprecated items.